# pytorch-deep-learning

./: 00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb  04_pytorch_custom_datasets.ipynb  06_pytorch_transfer_learning.ipynb  07_pytorch_experiment_tracking.ipynb  08_pytorch_paper_replicating.ipynb  09_pytorch_model_deployment.ipynb  pyproject.toml
docs/: 00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb
