[tool.poetry]
name = "pytorch-deep-learning"
version = "0.1.0"
description = ""
authors = ["Harry Nguyen <harry.m.h.nguyen@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_deep_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^6.5.4"
jupyterlab = "^3.6.3"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
torchmetrics = "^0.11.4"
tqdm = "^4.65.0"
mlxtend = "^0.22.0"
torchinfo = "^1.7.2"
black = "^23.3.0"
gradio = "^3.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
